# oa

./: Cargo.toml  Dockerfile  README.md  spec.yaml
.githooks/: pre-commit
.github/workflows/: general.yml
.sqlx/: query-07998c130b6010768555a55965ffe480da2e1961e29c4598ce2b55a147c3f2a0.json  query-e8efb68d6d84152831046f251ff37226b44afd7d5a02e60780cf678fea592695.json
docs/: breez_rust_types.md  chat-sharing.md  components.md  deepseek-changes-history.json  deepseek-fixer-log-1.md  deepseek-fixer-log-2.md  deepseek-fixer-log.md  githooks.md  hierarchy.md  sync-engine-roadmap.md  sync-engine.md  wallet.md
migrations/: 20240101000000_create_shared_conversations_table.sql  20240101000001_enable_uuid.sql
public/: background.js  index.html  main.js  principles.css  principles.html  style.css
public/components/: components.js  index.html  styles.css
scripts/: deepseek_test_fixer.sh  generate_hierarchy.rs  generate_hierarchy.sh
src/: close.rs  db.rs  error.rs  event.rs  lib.rs  main.rs  nauthz.rs  nip05.rs  startup.rs  subscription.rs  utils.rs
src/db/: builder.rs  mod.rs  types.rs
src/db/writer/: mod.rs  payment.rs  persistence.rs  rate_limit.rs  validation.rs
src/repo/: mod.rs  postgres_migration.rs
src/repo/postgres/: account.rs  event.rs  invoice.rs  mod.rs  query.rs  verification.rs
src/routes/: chats.rs  mod.rs  subscriptions.rs
tests/: conn.rs  health_check.rs
tests/common/: mod.rs
