[package]
name = "oa"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "oa"

[[bin]]
name = "generate-hierarchy"
path = "scripts/generate_hierarchy.rs"

[dependencies]
actix-files = "0.6"
actix-http = "3.0"
actix-web = "4"
async-std = "1.12.0"
async-trait = "0.1.60"
bech32 = "0.9.1"
bitcoin_hashes = { version = "0.10", features = ["serde"] }
clap = { version = "4.0.32", features = ["env", "default", "derive"] }
cln-rpc = "0.1.9"
config = { version = "0.14", default-features = false, features = ["yaml", "toml"] }
chrono = { version = "0.4.23", default-features = false, features = ["clock"] }
console-subscriber = "0.1.8"
const_format = "0.2.28"
futures = "0.3"
futures-util = "0.3"
governor = "0.4"
hex = "0.4"
http = { version = "0.2" }
hyper = { version = "0.14", features = ["client", "server", "http1", "http2", "tcp"] }
hyper-rustls = { version = "0.24" }
ignore = "0.4"
indicatif = "0.17.3"
lazy_static = "1.4"
log = "0.4"
nonzero_ext = "0.3"
nostr = { version = "0.18.0", default-features = false, features = ["base", "nip04", "nip19"] }
parse_duration = "2"
prometheus = "0.13.3"
prost = "0.11"
qrcode = { version = "0.12.0", default-features = false, features = ["svg"] }
rand = "0.8"
regex = "1"
secrecy = { version = "0.8", features = ["serde"] }
secp256k1 = { version = "0.21", features = ["rand", "rand-std", "serde", "bitcoin_hashes"] }
serde = { version = "1.0.115", features = ["derive"] }
serde-aux = "4"
serde_json = { version = "1.0", features = ["preserve_order"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "sqlite",
    "uuid",
    "chrono",
    "migrate",
    "json"
] }
thiserror = "1"
tokio = { version = "1", features = ["full", "tracing", "signal", "macros", "rt-multi-thread"] }
tokio-tungstenite = "0.17"
tonic = "0.8.3"
tracing = "0.1.37"
tracing-actix-web = "0.7"
tracing-appender = "0.2.2"
tracing-bunyan-formatter = "0.3.1"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"] }
tungstenite = "0.17"
url = "2.3.1"
uuid = { version = "1.1.2", features = ["v4", "serde"] }
walkdir = "2.4"

[dev-dependencies]
anyhow = "1"
reqwest = { version = "0.12", features = ["json"] }