[package]
name = "oa"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "oa"

[dependencies]
actix-web = "4"
actix-http = "3.0"
actix-files = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.116"
config = { version = "0.14", default-features = false, features = ["yaml"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "json",
] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
tracing = "0.1.19"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.1"
serde-aux = "4"
tracing-log = "0.2.0"
tracing-actix-web = "0.7"
secrecy = { version = "0.8", features = ["serde"] }
breez-sdk-liquid = { git = "https://github.com/breez/breez-sdk-liquid", branch = "main" }
sdk-common = { git = "https://github.com/breez/breez-sdk", rev = "f77208acd34d74b571388889e856444908c59a85", features = ["liquid"] }
anyhow = "1.0.79"
thiserror = "1.0"
env_logger = "0.11"
log = "0.4.20"
openssl = { version = "0.10", features = ["vendored"] }
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
async-trait = "0.1.80"
hex = "0.4"
getrandom = "=0.2.14"
bitcoin = { version = "0.31.2", features = ["rand", "base64", "rand-std"] }
elements = { version = "0.24.0", features = ["serde", "musig"] }
boltz-client = { git = "https://github.com/SatoshiPortal/boltz-rust", branch = "trunk" }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }

[patch.crates-io]
secp256k1-zkp = { git = "https://github.com/BlockstreamResearch/rust-secp256k1-zkp.git", rev = "60e631c24588a0c9e271badd61959294848c665d", features = ["musig", "global-context", "rand-std", "serde"] }
elements = { git = "https://github.com/ElementsProject/rust-elements", rev = "b3b3a0d00abcf086ea816d3437a83d88264e3e8c", features = ["musig"] }